# multimodality

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build.sh
src/: best_path.cpp  best_path.h  cartography.cpp  cartography.h  common_lib.h  config.cpp  config.h  global_info.h  main_multimodal.cpp  node.cpp  node.h  poly.cpp  poly.h  public_transp.cpp  public_transp.h
